helptext no register e menus/buttons no dashboard adicionados(mimics)

--- a/pmsb_web/conta/templates/dashboard/index.html
+++ b/pmsb_web/conta/templates/dashboard/index.html
@@ -220,7 +220,47 @@
             <ul class="nav-dropdown-items">
               <li class="nav-item">
                 <a class="nav-link" href="#">
-                  <i class="nav-icon icon-user"></i>Funcao 01</a>
+                  <i class="nav-icon icon-user"></i>Funcao 1.0</a>
+              </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link" href="base/tooltips.html">
+                  <i class="nav-icon icon-settings"></i> bbbb</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="base/tooltips.html">
+                  <i class="nav-icon icon-settings"></i> cccc</a>
+              </li> -->
+            </ul>
+          </li>
+          <li class="nav-item nav-dropdown open">
+            <a class="nav-link nav-dropdown-toggle" href="#">
+              <i class="nav-icon icon-list"></i>Menu 02</a>
+            <ul class="nav-dropdown-items">
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <i class="nav-icon icon-drop"></i>Funcao 2.0</a>
+              </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link" href="base/tooltips.html">
+                  <i class="nav-icon icon-settings"></i> bbbb</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="base/tooltips.html">
+                  <i class="nav-icon icon-settings"></i> cccc</a>
+              </li> -->
+            </ul>
+          </li>
+          <li class="nav-item nav-dropdown open">
+            <a class="nav-link nav-dropdown-toggle" href="#">
+              <i class="nav-icon icon-list"></i>Menu 03</a>
+            <ul class="nav-dropdown-items">
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <i class="nav-icon icon-note"></i>Funcao 3.0</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <i class="nav-icon icon-layers"></i>Funcao 3.1</a>
               </li>
               <!-- <li class="nav-item">
                 <a class="nav-link" href="base/tooltips.html">
