--- a/pmsb_web/conta/templates/conta/base.html
+++ b/pmsb_web/conta/templates/conta/base.html
@@ -16,6 +16,7 @@
   <link href="{% static 'node_modules/simple-line-icons/css/simple-line-icons.css' %}" rel="stylesheet">
   <!-- Main styles for this application-->
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
+  <link href="{% static 'css/pinax-message.css' %}" rel="stylesheet">
   <link href="{% static 'vendors/pace-progress/css/pace.min.css' %}" rel="stylesheet">
 </head>
 
