--- a/pmsb_web/conta/templates/dashboard/index.html
+++ b/pmsb_web/conta/templates/dashboard/index.html
@@ -101,7 +101,7 @@
               <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </span>
           </a>
-          <a class="dropdown-item text-center" href="#">
+          <a class="dropdown-item text-center" href="{% url 'pinax_messages:inbox' %}">
             <strong>Visualizar todas as Tarefas</strong>
           </a>
         </div>
@@ -176,7 +176,7 @@
             <strong>Tarefas</strong>
           </div>
           
-          <a class="dropdown-item" href="#">
+          <a class="dropdown-item" href="{% url 'pinax_messages:inbox' %}">
             <i class="fa fa-tasks"></i> Tarefas
             <!-- <span class="badge badge-danger">42</span> -->
           </a>
@@ -216,11 +216,15 @@
 
           <li class="nav-item nav-dropdown open">
             <a class="nav-link nav-dropdown-toggle" href="#">
-              <i class="nav-icon icon-list"></i>Menu 01</a>
+              <i class="nav-icon icon-list"></i>Tarefas</a>
             <ul class="nav-dropdown-items">
               <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="nav-icon icon-user"></i>Funcao 1.0</a>
+                <a class="nav-link" href="{% url 'pinax_messages:inbox' %}">
+                  <i class="nav-icon icon-layers"></i>Visualizar Tarefas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'pinax_messages:message_create' %}">
+                  <i class="nav-icon icon-note"></i>Nova Tarefa</a>
               </li>
               <!-- <li class="nav-item">
                 <a class="nav-link" href="base/tooltips.html">
@@ -232,7 +236,8 @@
               </li> -->
             </ul>
           </li>
-          <li class="nav-item nav-dropdown open">
+          
+          <!-- <li class="nav-item nav-dropdown open">
             <a class="nav-link nav-dropdown-toggle" href="#">
               <i class="nav-icon icon-list"></i>Menu 02</a>
             <ul class="nav-dropdown-items">
@@ -240,14 +245,6 @@
                 <a class="nav-link" href="#">
                   <i class="nav-icon icon-drop"></i>Funcao 2.0</a>
               </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link" href="base/tooltips.html">
-                  <i class="nav-icon icon-settings"></i> bbbb</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="base/tooltips.html">
-                  <i class="nav-icon icon-settings"></i> cccc</a>
-              </li> -->
             </ul>
           </li>
           <li class="nav-item nav-dropdown open">
@@ -262,36 +259,8 @@
                 <a class="nav-link" href="#">
                   <i class="nav-icon icon-layers"></i>Funcao 3.1</a>
               </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link" href="base/tooltips.html">
-                  <i class="nav-icon icon-settings"></i> bbbb</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="base/tooltips.html">
-                  <i class="nav-icon icon-settings"></i> cccc</a>
-              </li> -->
-            </ul>
-          </li>
-
-          <!-- <li class="nav-item nav-dropdown open">
-            <a class="nav-link nav-dropdown-toggle" href="#">
-              <i class="nav-icon icon-list"></i> Menu 02</a>
-            <ul class="nav-dropdown-items">
-              <li class="nav-item">
-                <a class="nav-link" href="base/tabs.html">
-                  <i class="nav-icon icon-settings"></i> aaaa</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="base/tooltips.html">
-                  <i class="nav-icon icon-settings"></i> bbbb</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="base/tooltips.html">
-                  <i class="nav-icon icon-settings"></i> cccc</a>
-              </li>
             </ul>
           </li> -->
-
         </ul>
 
       </nav>
