--- a/pmsb_web/conta/templates/dashboard/atualizar.html
+++ b/pmsb_web/conta/templates/dashboard/atualizar.html
@@ -6,7 +6,7 @@
       <div class="col-md-10">
         <div class="card mx-4">
           <div class="card-body p-4">
-            <h1 style="text-align: center;">Atualizar os Dados</h1>
+            <h2 style="text-align: center;">Atualizar os Dados</h2>
             <hr>
             <p class="text-muted" style="text-align: center;"></p>
             {% if Erro %}
@@ -14,7 +14,7 @@
             {% endif %} {{ form.as_p }}
             <br>
             <button type="submit" class="btn btn-warning ">Atualizar Dados</button>
-            <button href="{% url 'user_dados' %}" type="submit" class="btn btn-primary " style="float: right;">Voltar</button>
+            <a href="{% url 'user_dados' %}" class="btn btn-primary " style="float: right;">Voltar</a>
           </div>
         </div>
       </div>
