--- a/pmsb_web/conta/templates/pinax/messages/message_create.html
+++ b/pmsb_web/conta/templates/pinax/messages/message_create.html
@@ -1,5 +1,5 @@
 {% extends "dashboard/index.html" %} {% block main %}
-<form action="{% url 'user_edit' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
+<form action="{% url "pinax_messages:message_create" %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="container" style="margin-top: 10px">
     <div class="row justify-content-center">
