--- a/pmsb_web/conta/templates/pinax/messages/inbox.html
+++ b/pmsb_web/conta/templates/pinax/messages/inbox.html
@@ -1,40 +1,124 @@
 {% extends "dashboard/index.html" %} {% load pinax_messages_tags %} {% block main %}
+<style>
+    #myInput{
+        background-image: url('/css/searchicon.png');
+        background-position: 10px 12px;
+        background-repeat: no-repeat;
+        width: 100%;
+        font-size: 16px;
+        padding: 12px 20px 12px 40px;
+        border: 1px solid #ddd;
+        margin-bottom: 12px;
+    }
+</style>
 <div class="justify-content-center pinax-messages-inbox-container" style="margin-top: 10px;">
     <div class="card">
         <div class="card-header">
             <i class="fa fa-tasks"></i> Tarefas
-            <a class="button" style="float: right;" href="{% url "pinax_messages:message_create" %}">
+            <a class="button" style="float: right;" href="{% url 'pinax_messages:message_create' %}">
                 <i class="fa fa-tasks"></i>
                 Designar Tarefa
             </a>
         </div>
         <div class="card-body">
-            <section class="mailbox">
-                {% for thread in threads %}
-                <div class="thread {% if thread|unread:user %}unread{% endif %}">
-                    <a href="{{thread.get_absolute_url}}">
-                        <div class="participants">
-                        <p class="small text-muted" >De: {{thread.first_message.sender.first_name }}</p>
+            <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Procura pelo nome..." title="Escreva um nome">
+            <div class="col">
+                
+                <ul class="nav nav-tabs" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" data-toggle="tab" href="#enviadas" role="tab" aria-controls="home">Enviadas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#recebidas" role="tab" aria-controls="profile">Recebidas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#concluidas" role="tab" aria-controls="messages">Concluídas</a>
+                    </li>
+                </ul>
+                
+                <div class="tab-content">
+                    <div class="tab-pane mailbox active" id="enviadas" role="tabpanel">
+                        {% for thread in threads %} {% if thread.first_message.sender == user %}
+                        <div class="thread">
+                            <a href="{{thread.get_absolute_url}}">
+                                <div class="participants">
+                                    <p class="small text-muted">Para: {{ thread.users.all.0.first_name}}</p>
+                                </div>
+                                <div class="latest-message">
+                                    <p class="subject">Título: {{ thread.subject }}</p>
+                                    <p class="content">
+                                        <strong>Última Mensagem:</strong> {{ thread.latest_message.content }}</p>
+                                    {% if thread.latest_message.sender == user %}
+                                    <p class="content">
+                                        <strong>Quem enviou:</strong> Você</p>
+                                    {% else %}
+                                    <p class="content">
+                                            <strong>Quem enviou:</strong> {{ thread.latest_message.sender }}</p>
+                                    {% endif %}
+                                </div>
+                                <p class="content" style="bottom: 0;">
+                                    <strong>Horário: </strong>{{ thread.latest_message.sent_at }}</p>
+                            </a>
                         </div>
-                        <div class="latest-message">
-                            <p class="subject">Tarefa: {{ thread.subject }}</p>
-                            <p class="content"><strong>Última Mensagem:</strong> {{ thread.latest_message.content }}</p>
-                            {% if thread.latest_message.sender == user  %}
-                            <p class="content"><strong>Quem mandou:</strong> Você</p>
-                            {% else %}
-                            <p class="content"><strong>Quem mandou:</strong> {{ thread.latest_message.sender }}</p>
-                            {% endif %}
+                        {% endif %} {% empty %}
+                        <div class="no-messages">Você não enviou tarefas.</div>
+                        {% endfor %}
+                    </div>
+                    <div class="tab-pane mailbox" id="recebidas" role="tabpanel">
+                        {% for thread in threads %} 
+                        {% if thread.first_message.sender != user %}
+                        <div class="thread">
+                            <a href="{{thread.get_absolute_url}}">
+                                <div class="participants">
+                                    <p class="small text-muted">De: {{thread.first_message.sender.first_name }}</p>
+                                </div>
+                                <div class="latest-message">
+                                    <p class="subject">Tarefa: {{ thread.subject }}</p>
+                                    <p class="content">
+                                        <strong>Última Mensagem:</strong> {{ thread.latest_message.content }}</p>
+                                    {% if thread.latest_message.sender == user %}
+                                    <p class="content">
+                                        <strong>Quem mandou:</strong> Você</p>
+                                    {% else %}
+                                    <p class="content">
+                                        <strong>Quem mandou:</strong> {{ thread.latest_message.sender }}</p>
+                                    {% endif %}
+                                </div>
+                                <p class="content" style="bottom: 0;">
+                                    <strong>Horário: </strong>{{ thread.latest_message.sent_at }}</p>
+                            </a>
                         </div>
-                            <p class="content" style="bottom: 0;"><strong>Horário: </strong>{{ thread.latest_message.sent_at }}</p>
-                    </a>
+                        {% endif %} {% empty %}
+                        <div class="no-messages">Você não recebeu tarefas.</div>
+                        {% endfor %}
+                    </div>
+                    <div class="tab-pane" id="concluidas" role="tabpanel">
+                        Filtar as marcadas como concluidas /
+                        
+                    </div>
                 </div>
-                {% empty %}
-                <div class="no-messages">Você não tem tarefas.</div>
-                {% endfor %}
-            </section>
-            
+            </div>
         </div>
     </div>
-    
+
 </div>
+
+<script>
+        function myFunction() {
+            var input, filter, ul, li, a, i;
+            input = document.getElementById("myInput");
+            filter = input.value.toUpperCase();
+            div = document.getElementsByClassName("thread");
+            console.log(ul);
+            for (i = 0; i < div.length; i++) {
+                a = div[i].innerText;
+                console.log(a);
+                if (a.toUpperCase().indexOf(filter) > -1) {
+                    div[i].style.display = "";
+                } else {
+                    div[i].style.display = "none";
+                }
+            }
+        }
+</script>
 {% endblock %}
