--- a/pmsb_web/conta/templates/conta/login.html
+++ b/pmsb_web/conta/templates/conta/login.html
@@ -3,7 +3,7 @@
 
 <body class="app flex-row align-items-center fullscreen_bg">
   <div class="container">
-    <form action="{% url 'login' %}" onsubmit="remover_mascaras(this)" method="POST">
+    <form action="{% url 'conta:login' %}" onsubmit="remover_mascaras(this)" method="POST">
       {% csrf_token %}
       <div class="container">
         <div class="row justify-content-center">
@@ -46,7 +46,7 @@
                   </div>
                   <div class="row">
                     <div class="col-12" style="margin-top: 5px;">
-                      <a href="{% url 'registrar' %}" class="btn btn-secondary btn-lg btn-block px-0" role="button">
+                      <a href="{% url 'conta:registrar' %}" class="btn btn-secondary btn-lg btn-block px-0" role="button">
                         <span class="hidden-xs">Primeiro acesso? Cadastre-se aqui.</span>
                       </a>
                     </div>
