--- a/pmsb_web/conta/templates/conta/registrar.html
+++ b/pmsb_web/conta/templates/conta/registrar.html
@@ -1,7 +1,7 @@
 {% extends 'conta/base.html' %} {% block body %}
 <body class="app flex-row align-items-center fullscreen_bg">
 <div class='container' style="margin-top: 5px">
-    <form action="{% url 'registrar' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
+    <form action="{% url 'conta:registrar' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="container">
             <div class="row justify-content-center">
