adicionando namsce url app conta no template e mudancas no forms/views/models pinax-messages

--- a/pmsb_web/conta/templates/dashboard/atualizar_password.html
+++ b/pmsb_web/conta/templates/dashboard/atualizar_password.html
@@ -29,7 +29,7 @@
             {% endfor %}
             <br>
             <button type="submit" class="btn btn-warning ">Atualizar senha</button>
-            <a class="btn btn-primary " href="{% url 'user_dados'  %}" style="float: right;">Voltar</a>
+            <a class="btn btn-primary " href="{% url 'conta:user_dados'  %}" style="float: right;">Voltar</a>
           </div>
         </div>
       </div>
