--- a/pmsb_web/conta/templates/dashboard/index.html
+++ b/pmsb_web/conta/templates/dashboard/index.html
@@ -156,7 +156,7 @@
           <div class="dropdown-header text-center">
             <strong>Usuário</strong>
           </div>
-          <a class="dropdown-item" href="{% url 'user_dados'  %}">
+          <a class="dropdown-item" href="{% url 'conta:user_dados'  %}">
             <i class="fa icon-user"></i> Conta
             <!-- <span class="badge badge-info">42</span> -->
           </a>
@@ -196,7 +196,7 @@
           <div class="divider"></div>
           <!-- <a class="dropdown-item" href="#">
                   <i class="fa fa-shield"></i> Lock Account</a> -->
-          <a class="dropdown-item" href="{% url 'logout' %}">
+          <a class="dropdown-item" href="{% url 'conta:logout' %}">
             <i class="icon-logout"></i> Sair</a>
         </div>
       </li>
