--- a/pmsb_web/conta/templates/dashboard/atualizar.html
+++ b/pmsb_web/conta/templates/dashboard/atualizar.html
@@ -1,5 +1,5 @@
 {% extends "dashboard/index.html" %} {% block main %}
-<form action="{% url 'user_edit' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
+<form action="{% url 'conta:user_edit' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="container" style="margin-top: 10px">
     <div class="row justify-content-center">
@@ -14,7 +14,7 @@
             {% endif %} {{ form.as_p }}
             <br>
             <button type="submit" class="btn btn-warning ">Atualizar Dados</button>
-            <a href="{% url 'user_dados' %}" class="btn btn-primary " style="float: right;">Voltar</a>
+            <a href="{% url 'conta:user_dados' %}" class="btn btn-primary " style="float: right;">Voltar</a>
           </div>
         </div>
       </div>
