adequacao no pinax-message-thread

--- a/pmsb_web/conta/static/css/style.css
+++ b/pmsb_web/conta/static/css/style.css
@@ -14265,6 +14265,18 @@ body {
   background-repeat:repeat;
 }
 
+/* INPUT SEARCH  */
+#myInput {
+  background-image: url('/css/searchicon.png');
+  background-position: 10px 12px;
+  background-repeat: no-repeat;
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+margin-bottom: 12px;
+}
+
 /* PINAX MESSAGE */
 
 .pinax-messages-inbox-container h2 a{
