--- a/pmsb_web/conta/templates/conta/sucess.html
+++ b/pmsb_web/conta/templates/conta/sucess.html
@@ -9,7 +9,7 @@
                         <div class="card-body p-4">
                             <div class="panel panel-info">
                                 <div class="panel-heading">
-                                    <h4 class="panel-title" style="text-align: center;">Cadastro com as seguintes informações:</h4>
+                                    <h4 class="panel-title" style="text-align: center;">O cadastro com as seguintes informações:</h4>
                                     <hr>
                                 </div>
                                 <div class="panel-body">
@@ -49,7 +49,7 @@
                                 </div>
                                 <div class="panel-footer">
                                     <hr>
-                                    <h4 class="panel-title" style="text-align: center;">Foi efetuado com sucesso, esperar mais informações via e-mail.</h4>
+                                    <h4 class="panel-title" style="text-align: center;">Foi efetuado com sucesso. Aguarde orientações via e-mail.</h4>
                                     <div style="text-align:center; margin:auto;">
                                         <a href="{% url 'conta:login' %}" class="btn btn-primary " style="float: center;">Voltar</a>
                                     </div>
