--- a/pmsb_web/pinax/messages/templates/pinax/messages/thread_detail.html
+++ b/pmsb_web/pinax/messages/templates/pinax/messages/thread_detail.html
@@ -5,52 +5,69 @@
             <div class="card mx-4">
                 <div class="card-body p-4">
                     <h2 style="text-align: center;">
-                        {{ thread.subject }} 
+                        {{ thread.subject }}
                     </h2>
                     <hr>
-                    <h6 class="text-muted" style="text-align: center;">
-                       Prazo: {{ thread.data_de_entrega }}
+                    <h6 class="small text-muted" style="text-align: center;">
+                        <strong>Tarefa criada por:</strong> {{thread.first_message.sender}}
+                        <strong>Iniciada em:</strong> {{thread.first_message.sent_at}}
+                        <strong>Finaliza em:</strong> {{ thread.data_de_entrega }}
                     </h6>
                     <section class="container-fluid">
+                        <div class="card">
+                            <form class="comment-form" action="{% url 'pinax_messages:thread_detail' thread.pk %}" method="POST" enctype="multipart/form-data" style="padding: 5px;">
+                                {% csrf_token %} {{ form.as_p }}
+                                <div class="form-actions" style="padding: 5px;" >
+                                    <button type="submit" href="{% url 'pinax_messages:thread_detail' thread.pk %}" class="btn btn-warning ">Enviar</button>
+                                    <a href="{% url 'pinax_messages:inbox' %}" class="btn btn-primary " style="float: right;">Voltar</a>
+                                    {% if thread.first_message.sender == user %}
+                                    <a class="btn btn-danger" style="float: right; margin-right: 10px;" href="{% url 'pinax_messages:thread_delete' thread.pk %}">Marcar como concluída</a>
+                                    {% endif %}
+                                </div>
+                            </form>
+                        </div>
                         {% for message in thread.messages.all %}
                         <div class="card">
                             {% if message.sender == user %}
-                            <div style="text-align: left">
-                                <div class="message-byline">
-                                    <div class="text-muted">Você às {{ message.sent_at }}: </div>
+                            <div class="row">
+                                <div class="col-sm-2">
+                                    <img class="img-avatar" src="{{MEDIA}}{{message.sender.foto.url}}" alt="">
                                 </div>
-                                <div class="message-content">{{ message.content|urlize|linebreaks }}</div>
+                                <div class="col-sm-10">
+                                    <div style="text-align: left">
+                                        <div class="message-byline">
+                                            <div class="text-muted">Você às {{ message.sent_at }} escreveu: </div>
+                                        </div>
+                                        <div class="message-content">{{ message.content|urlize|linebreaks }}</div>
+                                    </div>
+                                </div>
                             </div>
                             {% else %}
-                            <div style="text-align: right">
-                                <div class="message-byline">
-                                    <div class="text-muted">{{ message.sender.first_name }} às {{ message.sent_at }}: </div>
+                            <div class="row">
+                                <div class="col-sm-10">
+                                    <div style="text-align: right">
+                                        <div class="message-byline">
+                                            <div class="text-muted">{{ message.sender.first_name }} às {{ message.sent_at }} escreveu: </div>
+                                        </div>
+                                        <div class="message-content">
+                                            {{ message.content|urlize|linebreaks }}
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="message-content">
-                                    {{ message.content|urlize|linebreaks }}
+                                <div class="col-sm-2">
+                                    <img class="img-avatar" src="{{MEDIA}}{{message.sender.foto.url}}" alt="">
                                 </div>
                             </div>
-                            {% endif %}
-                            {% if message.file_upload %}    
+                            {% endif %} 
+                            {% if message.file_upload %}
                             <hr>
                             <div class="message-byline">
-                                    <i class="fa fa-paperclip"></i><a download="{{message.file_upload}}" target="_blank" href="{{ message.file_upload.url }}"> Anexo </a>
+                                <i class="fa fa-paperclip"></i>
+                                <a download="{{message.file_upload}}" target="_blank" href="{{ message.file_upload.url }}">Anexo</a>
                             </div>
                             {% endif %}
                         </div>
-                        
                         {% endfor %}
-                        <form class="comment-form" action="{% url 'pinax_messages:thread_detail' thread.pk %}" method="POST" enctype="multipart/form-data">
-                            {% csrf_token %} 
-                            {{ form.as_p }}
-                            <div class="form-actions">
-                                <button type="submit" href="{% url 'pinax_messages:thread_detail' thread.pk %}" class="btn btn-warning ">Enviar</button>
-                                <a href="{% url 'pinax_messages:inbox' %}" class="btn btn-primary " style="float: right;">Voltar</a>
-                                {% if thread.messages.all.0.sender == user %}
-                                <a class="btn btn-danger" style="float: right; margin-right: 10px;" href="{% url 'pinax_messages:thread_delete' thread.pk %}">Marcar como concluída</a>
-                                {% endif %}
-                            </div>
-                        </form>
                     </section>
                 </div>
             </div>
