tirando titulo Tarefa:

--- a/pmsb_web/pinax/messages/templates/pinax/messages/inbox.html
+++ b/pmsb_web/pinax/messages/templates/pinax/messages/inbox.html
@@ -86,7 +86,7 @@
                                 <div class="container-fluid">
                                     <div class="row">
                                         <div class="col latest-message">
-                                            <p class="subject" style="text-align: center;">Tarefa: {{ thread.subject }}
+                                            <p class="subject" style="text-align: center;"> {{ thread.subject }}
                                             </p>
                                             <hr>
                                         </div>
@@ -128,7 +128,7 @@
                                 <div class="container-fluid">
                                     <div class="row">
                                         <div class="col latest-message">
-                                            <p class="subject" style="text-align: center;">Tarefa: {{ thread.subject }}
+                                            <p class="subject" style="text-align: center;"> {{ thread.subject }}
                                             </p>
                                             <hr>
                                         </div>
@@ -178,7 +178,7 @@
                                 <div class="container-fluid">
                                     <div class="row">
                                         <div class="col latest-message">
-                                            <p class="subject" style="text-align: center;">Tarefa: {{ thread.subject }}
+                                            <p class="subject" style="text-align: center;"> {{ thread.subject }}
                                             </p>
                                             <hr>
                                         </div>
