adequando layout do professor
- mudando div no searchinput

--- a/pmsb_web/conta/static/css/style.css
+++ b/pmsb_web/conta/static/css/style.css
@@ -14267,7 +14267,7 @@ body {
 
 /* INPUT SEARCH  */
 #myInput {
-  background-image: url('/css/searchicon.png');
+  background-image: url('../img/searchicon.png');
   background-position: 10px 12px;
   background-repeat: no-repeat;
   width: 100%;
