FIX: typo do django template }}

--- a/pmsb_web/pinax/messages/templates/pinax/messages/inbox.html
+++ b/pmsb_web/pinax/messages/templates/pinax/messages/inbox.html
@@ -69,8 +69,7 @@
                                                 <strong>Mensagem enviada por:</strong> Você</p>
                                             {% else %}
                                             <p class="content">
-                                                <strong>Mensagem enviada por:</strong> {{ thread.latest_message.sender.first_name
-                                                }}
+                                                <strong>Mensagem enviada por:</strong> {{ thread.latest_message.sender.first_name}}
                                             </p>
                                             {% endif %}
                                         </div>
